--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,7 @@
   src: url("/Nohemi/Nohemi-Thin.ttf");
 }
 
-h1 {
-  font-family: "N-Light";
+a {
+  text-decoration: none;
+  color: inherit; /* Makes the link inherit the text color from its parent */
 }
