--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -12,13 +12,20 @@
   justify-content: center;
 }
 
-/* .headerLogo {
+.headerLogo {
   margin-left: auto;
-} */
+}
+
+.flockText {
+  font-family: "N-ExtraBold";
+  font-size: 50px;
+  margin-right: 20px;
+  padding-bottom: 10px;
+}
 
 .logoContainer {
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
   justify-content: flex-end;
   width: 30vw;
   height: 10vh;
