--- a/src/app/Profile/Profile.module.css
+++ b/src/app/Profile/Profile.module.css
@@ -1,10 +1,5 @@
-/* .Profile{
-    display: flex;
-    flex-direction: column;
-    background-color: #dfdfdf;
-}  */
-body {
-  background-color: #dfdfdf;
+.profileContainer {
+  display: flex;
 }
 
 .profileImage {
@@ -19,7 +14,7 @@ body {
   background-color: white;
   font-family: "N-Light";
 }
-.banner {
+/* .banner {
   display: flex;
   flex-direction: row;
   background-color: #275aff;
@@ -36,7 +31,7 @@ body {
   font-family: "N-Bold";
   background-color: white;
   /* margin-top: 30px; */
-}
+/* 
 
 .button {
   font-family: "N-Bold";
@@ -56,4 +51,4 @@ body {
   gap: 20px;
   padding: 2%;
   justify-items: center;
-}
+}  */
