--- a/src/app/Profile/Profile.module.css
+++ b/src/app/Profile/Profile.module.css
@@ -2,12 +2,12 @@
   display: grid;
   grid-template-columns: 30vw 70vw;
   height: 100vh;
-  background-color: #f8f5f3;
+  background-color: #F8F5F3;
 }
 
 .banner {
   grid-column: 1 / 3;
-  background-color: #275aff;
+  background-color: #275AFF;
   height: 35vh;
   width: 100%;
   top: 0;
@@ -21,6 +21,9 @@
   height: 100vh;
   align-items: flex-end;
   justify-content: center;
+  padding-right: 40px;
+  transform: translateY(-30vh);
+}
 
 .bioHubsContainer {
   grid-column: 2;
