--- a/src/app/Profile/Profile.module.css
+++ b/src/app/Profile/Profile.module.css
@@ -1,15 +1,15 @@
 .profileContainer {
   display: grid;
-  grid-template-columns: 30vw 70vw;
+  grid-template-columns: 3fr 7fr;
   height: 100vh;
-  background-color: #F8F5F3;
+  background-color: #f8f5f3;
+  margin-bottom: 0;
 }
 
 .banner {
   grid-column: 1 / 3;
-  background-color: #275AFF;
+  background-color: #275aff;
   height: 35vh;
-  width: 100%;
   top: 0;
   left: 0;
 }
@@ -18,10 +18,10 @@
   grid-column: 1;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  margin-top: 50px;
   align-items: flex-end;
   justify-content: center;
-  padding-right: 40px;
+  padding-right: 5px;
   transform: translateY(-30vh);
 }
 
@@ -29,7 +29,7 @@
   grid-column: 2;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  margin-top: 60px;
   align-items: flex-start;
   justify-content: center;
   transform: translateY(-30vh);
@@ -40,7 +40,6 @@
   height: 180px;
   padding-right: 10px;
   margin-right: 25px;
-  margin-bottom: 20px;
   border-radius: 50%;
   overflow: hidden;
   display: flex;
