--- a/src/app/AllHubs/AllHubs.module.css
+++ b/src/app/AllHubs/AllHubs.module.css
@@ -7,6 +7,16 @@
   display: flex;
   justify-content: space-between;
 }
+
+.cardDiv {
+  box-sizing: border-box;
+  height: 70%;
+  width: 99%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 40px;
+}
 .buttons {
   padding: 10px;
 }
