--- a/src/app/AllHubs/AllHubsSearchBar/AllHubsSearchBar.module.css
+++ b/src/app/AllHubs/AllHubsSearchBar/AllHubsSearchBar.module.css
@@ -2,6 +2,8 @@
   border: none;
   border-radius: 20px;
   width: 30vw;
-  padding: 10px;
+  padding: 12px;
   font-family: "N-Light";
+  font-size: 14px;
+  margin-bottom: 12px;
 }
