--- a/src/app/Profile/ProfileComponents/EditingCard/EditingCard.module.css
+++ b/src/app/Profile/ProfileComponents/EditingCard/EditingCard.module.css
@@ -1,21 +1,56 @@
 .editingContainer {
-  background-color: white;
+  background-color: #dfdfdf;
   display: flex;
   flex-direction: column;
   border-radius: 60px;
   align-items: center;
-  justify-content: center;
-  width: 200px;
+  justify-content: flex-start;
+  width: 180px;
   height: 260px;
   margin: 20px 30px 0px 30px;
 }
 
 .editingButton {
-  background-color: #dfdfdf;
+  background-color: white;
   padding: 10px;
   border-radius: 10px;
   border: none;
   font-family: "N-light";
   width: 120px;
   font-size: 16px;
+  margin-top: 35px;
+  margin-bottom: 0;
+}
+
+.editingButton:hover {
+  transform: scale(1.1); /* Button grows by 10% on hover */
+}
+
+.colorButton {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  margin: 3px;
+}
+
+.colourButtonDiv {
+  width: 110px;
+  background-color: white;
+  box-sizing: border-box;
+  padding-left: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  align-items: center;
+  position: absolute;
+  bottom: 55;
+  justify-content: center;
+  display: flex;
+}
+
+.buttonCenterPanel {
+  width: 100px;
 }
