--- a/src/app/Profile/Profile.module.css
+++ b/src/app/Profile/Profile.module.css
@@ -17,7 +17,7 @@
   grid-column: 1;
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
+  margin-top: 30px;
   align-items: flex-end;
   justify-content: center;
   padding-right: 5px;
@@ -35,7 +35,7 @@
 }
 
 .imageContainer {
-  width: 180px;
+  width: 170px;
   height: 180px;
   padding-right: 10px;
   margin-right: 25px;
@@ -67,4 +67,8 @@
   font-size: 18px;
   letter-spacing: 0.02rem;
   line-height: 110%;
+}
+
+.favHubsContainer:hover {
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1);
 }
