--- a/src/app/SingleHub/SingleHub.module.css
+++ b/src/app/SingleHub/SingleHub.module.css
@@ -1,28 +1,149 @@
+.pageContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 100vh;
+  background-color: #f8f5f3;
+  flex-direction: row;
+}
+
 .ForumContainer {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;  /* Adds spacing between items */
-    width: 100%;  /* Ensures it takes full width */
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  width: 80vw;
+  box-sizing: border-box;
+  align-items: flex-start;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  height: 100vh;
+  background-color: #275aff;
+
+  overflow: hidden;
+}
+
+.titleContainer {
+  display: flex;
+  height: 100vh;
+  align-items: flex-end;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.eventCarouselLogoDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+
+  height: 70vh;
+  width: 19.9vw;
+}
+
+.eventCarouselDiv {
+  display: flex;
+  margin-top: 30vh;
+  height: 80vh;
+}
+.boardContainer {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  width: 55vw;
+  padding-right: 10px;
+  margin-right: 10px;
+  justify-content: center;
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  max-width: 60vw;
+  padding-bottom: 10px;
+}
+.titleButtonContainer {
+  max-width: 60vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .ForumBoard {
-    flex: 2;  /* Takes more space */
-    border: 1px solid #ddd;
-    padding: 10px;
-    border-radius: 30px;
+  width: 60vw;
+  height: 60vh;
+  border: 1px solid #ddd;
+  background-color: white;
+  padding: 10px;
+  border-radius: 30px;
 }
 
 .Carousel {
-    flex: 1;  /* Takes less space */
-    border: 1px solid #ddd;
-    padding: 10px;
-    border-radius: 30px;
+  height: 100vh;
+  border: 1px solid #ddd;
+
+  border-radius: 30px;
 }
-.PostCreator{
-    display: flex;
-    flex-direction: column;
+.PostCreator {
+  display: flex;
+  padding: 10px;
+  margin: 10px;
+  font-family: "N-Light";
+  border-radius: 20px;
+  width: 60vw;
+  flex-direction: column;
+  background-color: transparent;
 }
 
-.Post{
-    background-color: white;
+.Post {
+  background-color: white;
+}
+
+.flockLogo {
+  font-family: "N-ExtraBold";
+  font-size: 25px;
+  padding-right: 10px;
+  padding-top: 10px;
+}
+.hubName {
+  font-family: "N-Extrabold";
+  font-size: 4vw;
+  letter-spacing: 2px;
+  max-width: 100%;
+}
+
+.bodyInputBox {
+  border: none;
+  border-radius: 30px;
+  resize: none;
+  padding: 12px;
+  margin-top: 10px;
+  font-family: "N-Light";
+  font-size: 18px;
+  height: 10vh;
+}
+
+.titleBox {
+  width: 85%;
+  border: none;
+  font-family: "N-Light";
+  font-size: 18px;
+  padding: 5px;
+  padding-left: 12px;
+  height: 4vh;
+  margin-top: 10px;
+  border-radius: 30px;
+}
+
+.submitButton {
+  border: none;
+  font-family: "N-Light";
+  font-size: 18px;
+  padding: 10px;
+  height: 5vh;
+  width: 5vw;
+  margin-top: 10px;
+  border-radius: 30px;
+  background-color: white;
+  overflow: hidden;
 }
