--- a/src/app/AboutUs/AboutUs.module.css
+++ b/src/app/AboutUs/AboutUs.module.css
@@ -39,7 +39,7 @@
 
 .flockLogo {
   font-family: "N-ExtraBold";
-  font-size: 25px;
+  font-size: 2.5vw;
   padding-right: 10px;
   padding-top: 10px;
 }
