--- a/src/app/AllHubs/AllHubs.module.css
+++ b/src/app/AllHubs/AllHubs.module.css
@@ -45,7 +45,7 @@
 
 .flockLogo {
   font-family: "N-ExtraBold";
-  font-size: 25px;
+  font-size: 2.5vw;
   padding-right: 10px;
   padding-top: 10px;
 }
