--- a/src/app/SingleHub/SingleHub.module.css
+++ b/src/app/SingleHub/SingleHub.module.css
@@ -5,6 +5,7 @@
   height: 100vh;
   background-color: #f8f5f3;
   flex-direction: row;
+  overflow: hidden;
 }
 
 .ForumContainer {
@@ -27,39 +28,36 @@
   height: 100vh;
   align-items: flex-end;
   justify-content: flex-start;
+  padding-left: 10px;
   box-sizing: border-box;
-  padding: 10px;
 }
 
 .eventCarouselLogoDiv {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-
-  height: 70vh;
+  height: 100vh;
   width: 19.9vw;
 }
 
 .eventCarouselDiv {
   display: flex;
-  margin-top: 30vh;
-  height: 80vh;
+  height: 100%;
 }
 .boardContainer {
   flex-direction: column;
   display: flex;
   align-items: center;
   height: 100vh;
-  width: 55vw;
-  padding-right: 10px;
-  margin-right: 10px;
+  width: 58vw;
+
   justify-content: center;
 }
 
 .inputContainer {
   display: flex;
   flex-direction: column;
-  max-width: 60vw;
+  width: 61vw;
   padding-bottom: 10px;
 }
 .titleButtonContainer {
@@ -76,6 +74,7 @@
   background-color: white;
   padding: 10px;
   border-radius: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
 
 .Carousel {
@@ -86,8 +85,7 @@
 }
 .PostCreator {
   display: flex;
-  padding: 10px;
-  margin: 10px;
+
   font-family: "N-Light";
   border-radius: 20px;
   width: 60vw;
@@ -101,7 +99,7 @@
 
 .flockLogo {
   font-family: "N-ExtraBold";
-  font-size: 25px;
+  font-size: 2.5vw;
   padding-right: 10px;
   padding-top: 10px;
 }
@@ -116,11 +114,12 @@
   border: none;
   border-radius: 30px;
   resize: none;
-  padding: 12px;
-  margin-top: 10px;
+  padding: 14px;
+  margin-top: 15px;
   font-family: "N-Light";
   font-size: 18px;
   height: 10vh;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
 
 .titleBox {
@@ -131,8 +130,9 @@
   padding: 5px;
   padding-left: 12px;
   height: 4vh;
-  margin-top: 10px;
+  margin-top: 30px;
   border-radius: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
 
 .submitButton {
@@ -142,8 +142,9 @@
   padding: 10px;
   height: 5vh;
   width: 5vw;
-  margin-top: 10px;
+  margin-top: 35px;
   border-radius: 30px;
   background-color: white;
   overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
