style: all hubs buttons edited

--- a/src/app/AllHubs/AllHubsSearchBar/AllHubsSearchBar.module.css
+++ b/src/app/AllHubs/AllHubsSearchBar/AllHubsSearchBar.module.css
@@ -1,9 +1,9 @@
 .searchInput {
   border: none;
-  border-radius: 20px;
+  border-radius: 10vh;
   width: 30vw;
   padding: 12px;
   font-family: "N-Light";
-  font-size: 14px;
+  font-size: 2.5vh;
   margin-bottom: 12px;
 }
