Single hub page styling fixed

--- a/src/app/SingleHub/SingleHub.module.css
+++ b/src/app/SingleHub/SingleHub.module.css
@@ -42,7 +42,7 @@
 
 .eventCarouselDiv {
   display: flex;
-  height: 100%;
+  height: 80%;
 }
 .boardContainer {
   flex-direction: column;
@@ -66,14 +66,24 @@
   align-items: center;
   justify-content: space-between;
 }
+.scrollContainer {
+  overflow: hidden;
+  width: 60vw;
+  height: 60vh;
+  border-radius: 5vh;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
 .ForumBoard {
   width: 60vw;
   height: 60vh;
   border: 1px solid #ddd;
-  overflow-y: auto; /* Prevents scrollbar from going outside */
+  overflow-y: auto;
+
+  padding-right: 10px;
   background-color: #f8f5f3;
-  padding: 10px;
+
   border-radius: 5vh;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   overflow-x: hidden;
@@ -86,7 +96,7 @@
 }
 
 .ForumBoard::-webkit-scrollbar-thumb {
-  background: grey; /* Scrollbar color */
+  background: #dfdfdf; /* Scrollbar color */
   border-radius: 5vh;
 }
 
