styles: Most pages responsive styling added

--- a/src/app/AllHubs/AllHubs.module.css
+++ b/src/app/AllHubs/AllHubs.module.css
@@ -52,7 +52,7 @@
 
 .hubsTitle {
   font-family: "N-ExtraBold";
-  font-size: 80px;
+  font-size: 10vh;
   margin-left: 15px;
   margin-bottom: 0;
 }
