--- a/src/app/Profile/ProfileComponents/EditingCard/EditingCard.module.css
+++ b/src/app/Profile/ProfileComponents/EditingCard/EditingCard.module.css
@@ -5,19 +5,19 @@
   border-radius: 60px;
   align-items: center;
   justify-content: flex-start;
-  width: 180px;
-  height: 260px;
-  margin: 20px 30px 0px 30px;
+  width: 12vw;
+  height: 50vh;
+  margin: 2vh 3vh 0px 3vh;
 }
 
 .editingButton {
   background-color: white;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 2vh;
+  border-radius: 5vh;
   border: none;
   font-family: "N-light";
-  width: 120px;
-  font-size: 16px;
+  width: 8vw;
+  font-size: 2vh;
   margin-top: 35px;
   margin-bottom: 0;
 }
