--- a/src/app/Rules/Rules.module.css
+++ b/src/app/Rules/Rules.module.css
@@ -25,15 +25,15 @@
   display: flex;
   flex-direction: column;
   line-height: 120%;
-  padding: 20px;
+  padding: 4vh;
   border-radius: 2em;
   border: 1px solid #dfdfdf;
   box-sizing: border-box;
-  margin-top: 10px;
+  margin-top: 4vh;
   font-family: "N-light";
   background-color: #dfdfdf;
   max-width: 80vw;
-  font-size: 16px;
+  font-size: 2vh;
   letter-spacing: 0.5px;
 }
 
@@ -63,7 +63,7 @@
 
 .footerText {
   font-family: "N-ExtraBold";
-  font-size: 75px;
+  font-size: 8vh;
   padding-left: 10px;
   color: #dfdfdf;
 }
