--- a/src/app/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/app/components/BurgerMenu/BurgerMenu.module.css
@@ -23,7 +23,7 @@
 .menuButton {
   background: none;
   border: none;
-  font-size: 24px;
+  font-size: 4.5vh;
   margin: 4px;
   cursor: pointer;
   padding-top: 0;
@@ -34,14 +34,14 @@
 }
 .menuList {
   font-family: "N-light";
-  font-size: 18px;
+  font-size: 2.7vh;
   color: black;
   list-style-type: none;
 }
 
 .bmListItems {
   display: block; /* Make each list item block-level to take full width */
-  padding: 12px 10px 10px 8px; /* Space inside each item */
+  padding: 1.4vh 1.2vh 1.2vh 1vh; /* Space inside each item */
   border-top: 1px solid black; /* Black border around each item */
 }
 
@@ -76,7 +76,7 @@
   padding: 0px 10px 8px 12px;
   align-self: flex-start;
   font-family: "N-Medium";
-  font-size: 16px;
+  font-size: 2.5vh;
   text-decoration: underline;
   transition: transform 0.3s ease;
 }
@@ -90,7 +90,7 @@
   background-color: white;
   background: none;
   border: none;
-  font-size: 24px;
+  font-size: 3.5vh;
   cursor: pointer;
   padding-top: 0;
   padding: 3px 6px 6px 12px;
@@ -99,4 +99,10 @@
 }
 .xButton:hover {
   transform: scale(1.3);
+}
+
+.bottomDiv {
+  height: 100%;
+  display: flex;
+  align-items: flex;
 }
