--- a/src/app/Profile/Profile.module.css
+++ b/src/app/Profile/Profile.module.css
@@ -28,15 +28,15 @@
   grid-column: 2;
   display: flex;
   flex-direction: column;
-  margin-top: 13vh;
+  margin-top: 8vh;
   align-items: flex-start;
   justify-content: center;
   transform: translateY(-30vh);
 }
 
 .imageContainer {
-  width: 20vh;
-  height: 20vh;
+  width: 25vh;
+  height: 25vh;
   margin-right: 4vh;
   border-radius: 50%;
   overflow: hidden;
@@ -44,6 +44,7 @@
   justify-content: center;
   align-items: center;
   border: none;
+  box-shadow: 0.2vw 0.2vh 0.8vw rgba(0, 0, 0, 0.1);
 }
 
 .profileImage {
@@ -58,14 +59,14 @@
   background-color: white;
   width: 50vw;
   padding: 30px;
-  margin-bottom: 30px;
   border-radius: 40px;
-  height: 40vh;
+  height: 42vh;
   overflow: hidden;
   font-family: "N-light";
   font-size: 3vh;
   letter-spacing: 0.02rem;
   line-height: 110%;
+  box-shadow: 0.2vw 0.2vh 0.8vw rgba(0, 0, 0, 0.1);
 }
 
 .favHubsContainer:hover {
