--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -44,34 +44,40 @@
 
 .textCardContainer {
   display: grid;
-  grid-template-rows: 1fr 70vh; /* Bio text takes remaining space, hubDiv is fixed */
-  grid-template-columns: 1fr 3fr 1fr; /* Center column layout */
+  grid-template-rows: auto auto auto;
+  grid-template-columns: 1fr 3fr 1fr;
   height: 90vh;
 }
 
-.bioText,
-.hubDiv {
-  grid-column: 2; /* Places both elements in the central column */
-  text-align: center;
-}
-
-.hubDiv {
-  height: 40vh;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 3.5vh;
-  row-gap: 2.5vh;
-  justify-content: center;
-  align-self: center;
-  margin-bottom: 7vh;
-}
-
 .bioText {
-  align-self: end; /* Pushes text to the bottom of its row */
+  grid-column: 2;
   text-align: center;
+  align-self: center; /* Changed from end to center to move it higher */
   font-family: "N-Thin";
   font-size: 2.8vh;
+  margin-top: 3vh; /* Added space below bio text */
+}
+
+.trendingHubs {
+  grid-column: 2;
+  text-align: left;
+  font-size: 2vh;
+  font-family: "N-Regular";
+  margin-bottom: 2vh;
+  margin-left: 2vh;
+  align-self: end;
+}
+
+.hubDiv {
+  grid-column: 2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 3.5vh;
+  row-gap: 0vh;
+  justify-content: flex-start;
+  margin-bottom: 7vh;
+  height: 90%;
 }
 
 .homeButtonArt {
@@ -104,7 +110,7 @@
   display: flex;
   align-items: flex-end;
   font-family: "N-ExtraBold";
-  font-size: 4.2vh;
+  font-size: 4vh;
   text-align: left;
   padding-left: 1.5vw;
   padding-bottom: 1.4vh;
