profile page fixed

--- a/src/app/components/AllHubsContainer/AllHubsContainer.module.css
+++ b/src/app/components/AllHubsContainer/AllHubsContainer.module.css
@@ -23,3 +23,27 @@
 .hubButton:hover {
   transform: scale(1.05);
 }
+
+.yellowHover:hover {
+  background-color: #ffd955;
+}
+
+.orangeHover:hover {
+  background-color: #ff8534;
+}
+
+.greenHover:hover {
+  background-color: #4b6e49;
+}
+
+.coralHover:hover {
+  background-color: #feabab;
+}
+
+.redHover:hover {
+  background-color: #ff3f3f;
+}
+
+.blueHover:hover {
+  background-color: #275aff;
+}
