--- a/src/app/AllHubs/AllHubs.module.css
+++ b/src/app/AllHubs/AllHubs.module.css
@@ -15,7 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 40px;
+  padding-bottom: 9vh;
 }
 .buttons {
   padding: 10px;
