--- a/src/app/Profile/Profile.module.css
+++ b/src/app/Profile/Profile.module.css
@@ -58,7 +58,7 @@
 .favHubsContainer {
   background-color: white;
   width: 50vw;
-  padding: 30px;
+  padding: 4vh;
   border-radius: 40px;
   height: 42vh;
   overflow: hidden;
@@ -71,4 +71,10 @@
 
 .favHubsContainer:hover {
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1);
+}
+
+.joinedHubs {
+  font-size: 2.5vh;
+  margin-left: 3vh;
+  margin-bottom: 3vh;
 }
