--- a/src/app/Profile/ProfileComponents/EditingCard/EditingCard.module.css
+++ b/src/app/Profile/ProfileComponents/EditingCard/EditingCard.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: flex-start;
   width: 15vw;
-  height: 50vh;
+  height: 48vh;
   margin: 2vh 3vh 0px 3vh;
 }
 
@@ -18,7 +18,19 @@
   font-family: "N-light";
   width: 10vw;
   font-size: 2.2vh;
-  margin-top: 35px;
+  margin-top: 6vh;
+  margin-bottom: 0;
+}
+
+.editingButtonBanner {
+  background-color: white;
+  padding: 3vh;
+  border-radius: 5vh;
+  border: none;
+  font-family: "N-light";
+  width: 10vw;
+  font-size: 2.2vh;
+  margin-top: 10vh;
   margin-bottom: 0;
 }
 
@@ -27,12 +39,12 @@
 }
 
 .colorButton {
-  width: 10vw;
-  height: 20px;
+  width: 2vw;
+  height: 2vw;
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  margin: 3px;
+  margin: 0.4vh;
 }
 
 .colorButton:hover {
@@ -40,21 +52,23 @@
 }
 
 .colourButtonDiv {
-  width: 110px;
+  width: 9vw;
+  height: 9vw;
   background-color: white;
   box-sizing: border-box;
-  padding-left: 15px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin: 10px;
-  border-radius: 10px;
+  padding-left: 0.9vw;
+  padding-top: 0.6vw;
+  padding-bottom: 0.6vw;
+  margin: 0.6vw;
+  border-radius: 1.5vw;
   align-items: center;
   position: absolute;
-  bottom: 65;
+  bottom: 5vh;
   justify-content: center;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .buttonCenterPanel {
-  width: 100px;
+  width: 9vw;
 }
