--- a/src/app/AboutUs/AboutUs.module.css
+++ b/src/app/AboutUs/AboutUs.module.css
@@ -66,3 +66,14 @@
   padding-left: 10px;
   color: #f8f5f3;
 }
+
+@media (max-width: 768px) {
+  .container {
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+}
