--- a/src/app/components/AllHubsContainer/AllHubsContainer.module.css
+++ b/src/app/components/AllHubsContainer/AllHubsContainer.module.css
@@ -1,7 +1,7 @@
 .buttonDiv {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   width: 70vw;
   height: 50vh;
   flex-wrap: wrap;
