--- a/src/app/Profile/Profile.module.css
+++ b/src/app/Profile/Profile.module.css
@@ -78,6 +78,16 @@
   margin-left: 3vh;
   margin-bottom: 3vh;
 }
+/* If user is not logined in  */
+.loginMessage,
+.loadingMessage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 1.5rem;
+  color: #333;
+}
 
 @media (max-width: 768px) {
   /* Adjust grid layout */
