--- a/src/app/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/app/components/BurgerMenu/BurgerMenu.module.css
@@ -156,3 +156,55 @@
     padding: 0px 6px 5px 8px;
   }
 }
+
+/* Auth Form  */
+.authFormContainer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1500;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  font-family: "N-light";
+}
+
+.authFormContainer input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.authFormContainer button {
+  background-color: #adadad;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.authFormContainer button:hover {
+  background-color: gray;
+}
+
+/* Overlay effect */
+.authOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1400;
+}
+
